Add footer with © 2025 BetaLaunch Labs Inc.

--- a/index.html
+++ b/index.html
@@ -161,5 +161,8 @@
       </p>
     </section>
   </main>
+  <footer style="text-align:center; padding: 1rem 0; font-size: 0.9rem; color: #888; border-top: 1px solid #333;">
+    © 2025 BetaLaunch Labs Inc.
+  </footer>  
 </body>
 </html>
