Add footer with © 2025 BetaLaunch Labs Inc.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
     <h1>🧠 RFPWise.AI – Win More Work, Waste Less Time</h1>
     <p>
       Tired of spending several hours drafting engineering or consulting proposals?<br />
-      <strong>RFPWise.AI</strong> helps firms like yours create high-quality technical proposals in a fraction of the time.
+      <strong>RFPWise.AI</strong> helps firms like yours create high-quality technical proposals in a fraction of the time.  
+      <br /><br />
+      It generates <strong>50–80% of your proposal in minutes</strong> — by combining a past submission and a new RFP.  
+      The process is <strong>interactive</strong>, so you stay in control every step of the way.
     </p>
   </header>
 
