--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       Tired of spending several hours drafting engineering or consulting proposals?<br />
       <strong>RFPWise.AI</strong> helps firms like yours create high-quality technical proposals in a fraction of the time.  
       <br /><br />
-      It generates <strong>50–80% of your proposal in minutes</strong> — by combining a past submission and a new RFP.  
+      RFPWise.AI generates <strong>50–80% of your proposal in minutes</strong> by combining a past submission and a new RFP.<br />
       The process is <strong>interactive</strong>, so you stay in control every step of the way.
     </p>
   </header>
