Add footer with © 2025 BetaLaunch Labs Inc.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <section class="cta">
       <h2>✅ Get Early Access</h2>
       <p>We’re launching a closed beta with a small group of users who want to shape the future of proposal generation.<br />
-        📬 Sign up now to get access when version is released.</p>
+        📬 Sign up now to get access when the Beta version is released.</p>
       <a href="https://forms.gle/oWM1VZxFK818C7ab8" target="https://forms.gle/oWM1VZxFK818C7ab8">
         <button>Join the Beta</button>
       </a>
