Add footer with © 2025 BetaLaunch Labs Inc.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
   <header>
-    <h1>🧠 RFPWise.AI – Win More Work, Waste Less Time</h1>
+    <h1>💡 RFPWise.AI – Win More Work, Waste Less Time</h1>
     <p>
       Tired of spending several hours drafting engineering or consulting proposals?<br />
       <strong>RFPWise.AI</strong> helps firms like yours create high-quality technical proposals in a fraction of the time.  
